tests/ui/default/invalid_default_format.rs
use modular_bitfield::prelude::*;

#[bitfield]
pub struct InvalidDefaultFormat {
    #[default]
    pub field: bool,
    pub other: B7,
}

fn main() {}